Desktop UI finished

--- a/6_1082_PUSCARU_Vlad.css
+++ b/6_1082_PUSCARU_Vlad.css
@@ -38,6 +38,11 @@
   animation-fill-mode: both;
 }
 
+.animated--fast {
+  animation-duration: .1s;
+  animation-fill-mode: both;;
+}
+
 @keyframes fadeOut {
   from {
     opacity: 1;
@@ -74,6 +79,10 @@
   box-sizing: border-box;
 }
 
+label span {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 #title {
   position: fixed;
   top: 20px;
@@ -89,6 +98,7 @@
 
 .container #sidebar {
   width: 20%;
+  max-width: 199px;
 }
 
 .container #canvas {
@@ -102,6 +112,7 @@
 h1 {
   font-family: V;
   opacity: 0.2;
+  user-select: none;
 }
 
 #sidebar {
@@ -120,12 +131,12 @@ h1 {
 
 #btn {
   position: absolute;
-  top: 50px;
+  top: 20px;
   right: -40px;
   width: 40px;
   height: 30px;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
   background-color: #37392E;
   background-image: url(./media/double-arrow.svg);
   background-size: 20px;
@@ -144,6 +155,18 @@ h1 {
 
 #btn:hover {
   cursor: pointer;
+}
+
+#info, #copy, #toolbar {
+  display: none;
+}
+
+#info.active, #copy.active {
+  display: block;
+}
+
+#toolbar.active {
+  display: flex;
 }
 
 #copy {
@@ -207,4 +230,106 @@ h1 {
 
 #clear {
   background-image: url(./media/eraser.svg);
+}
+
+#toolbar {
+  width: 90%;
+  margin: 0 auto;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.item {
+  width: 50px;
+  height: 50px;
+  padding: 2px;
+  margin: 5px 0;
+  text-align: center;
+  font-size: 40px;
+  position: relative;
+  transition: background-color .3s ease-in-out;
+  border-radius: 3px;
+}
+
+.item:hover, .item.active {
+  background-color: #F7EDF0;
+  color: #37392E;
+  cursor: pointer;
+}
+
+.item:hover .inner, .item.active .inner {
+  background-color: #37392E;
+  border-color: #37392E;
+}
+
+.item:hover svg, .item.active svg {
+  fill: #37392E;
+}
+
+.item.item--ellipse:hover .inner, 
+.item.item--ellipse.active .inner,
+.item.item--rectangle:hover .inner,
+.item.item--rectangle.active .inner {
+  background-color: #F7EDF0;
+}
+
+.item--line .inner {
+  width: 110%;
+  height: 2px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(-45deg);
+  background-color: #F7EDF0;
+  transition: background-color .3s ease-in-out;
+}
+
+.item--ellipse .inner {
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+  border: 2px solid #F7EDF0;
+  border-radius: 50%;
+}
+
+.item--rectangle .inner {
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+  border: 2px solid #F7EDF0;
+}
+
+.item--select svg {
+  fill: #F7EDF0;
+}
+
+#selected-properties .row {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+#selected-properties .row.header {
+  font-size: 12px;
+}
+
+.prop {
+  width: 50%;
+}
+
+.prop label {
+  width: 50%;
+}
+
+.prop input {
+  width: 50px;
+  margin-left: auto;
+  padding: 2px 5px;
+  background-color: rgb(90, 94, 76);
+  border: 1px solid #F7EDF0;
+  color: #F7EDF0;
+}
+
+.prop input:focus {
+  outline: none;
 }
