--- a/6_1082_PUSCARU_Vlad.css
+++ b/6_1082_PUSCARU_Vlad.css
@@ -326,7 +326,7 @@ h1 {
   border: 2px solid #F7EDF0;
 }
 
-.item--select svg {
+.item--select svg, .item--poly svg {
   fill: #F7EDF0;
 }
 
@@ -360,4 +360,33 @@ h1 {
 
 .prop input:focus {
   outline: none;
+}
+
+
+
+
+
+
+#editor {
+  width: 100%;
+  height: 100%;
+}
+
+#editor svg * {
+  fill: white;
+  fill-opacity: 0.2;
+  stroke: #37392E;
+  stroke-opacity: 0.2;
+}
+
+#editor #selection--rectangle {
+  display: none;
+  fill: transparent;
+  stroke: #37392E;
+  stroke-opacity: 0.8;
+  stroke-dasharray: 2,2;
+}
+
+#editor .selected {
+  fill: #37392E;
 }
